--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "h5p-bingo",
   "version": "0.2.2",
   "description": "Game for boring conferences or meetings ;-)",
-  "private": true,
   "scripts": {
-    "test": "ava",
-    "build": "cross-env NODE_ENV='production' webpack -p",
-    "watch": "webpack --watch"
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack -p",
+    "watch": "./node_modules/.bin/webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -19,18 +17,24 @@
   ],
   "author": "Oliver Tacke",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/otacke/h5p-bingo/issues"
+  },
+  "homepage": "https://github.com/otacke/h5p-bingo#readme",
   "devDependencies": {
-    "ava": "^0.25.0",
-    "babel-cli": "^6.26.0",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^6.3.2",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-    "cross-env": "^4.0.0",
-    "css-loader": "^0.26.2",
-    "style-loader": "^0.13.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^2.2.1"
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "resolve-url-loader": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {}
 }
