--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.3",
   "description": "Game for boring conferences or meetings ;-)",
   "scripts": {
-    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack -p",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack",
     "watch": "./node_modules/.bin/webpack --watch"
   },
   "repository": {
@@ -22,18 +22,19 @@
   },
   "homepage": "https://github.com/otacke/h5p-bingo#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "babel-loader": "^8.0.6",
-    "babel-minify-webpack-plugin": "^0.3.1",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "babel-loader": "^8.2.2",
     "cross-env": "^5.2.1",
-    "css-loader": "^1.0.1",
-    "file-loader": "^2.0.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "resolve-url-loader": "^3.1.2",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "css-loader": "^5.0.1",
+    "eslint": "^7.18.0",
+    "mini-css-extract-plugin": "^1.3.4",
+    "regenerator-runtime": "^0.13.7",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.0.0"
   }
 }
