--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.3.2",
   "description": "Game for boring conferences or meetings ;-)",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "watch": "webpack --watch"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "stylelint './src/**/*.scss' && eslint './src/**/*.js'",
+    "build": "webpack --mode=production",
+    "watch": "webpack --watch --mode=development"
   },
   "repository": {
     "type": "git",
@@ -22,19 +24,23 @@
   },
   "homepage": "https://github.com/otacke/h5p-bingo#readme",
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.2",
-    "eslint": "^8.28.0",
-    "mini-css-extract-plugin": "^2.7.0",
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.42.0",
+    "eslint-plugin-jsdoc": "^46.2.5",
+    "mini-css-extract-plugin": "^2.7.6",
     "regenerator-runtime": "^0.13.11",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
-  }
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "stylelint": "^15.7.0",
+    "stylelint-config-recommended": "^12.0.0",
+    "stylelint-config-recommended-scss": "^12.0.0",
+    "webpack": "^5.85.1",
+    "webpack-cli": "^5.1.3"
+  },
+  "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
 }
