--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
   },
   "homepage": "https://github.com/otacke/h5p-bingo#readme",
   "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.51.0",
-    "eslint-plugin-jsdoc": "^46.8.2",
-    "mini-css-extract-plugin": "^2.7.6",
-    "regenerator-runtime": "^0.14.0",
+    "css-loader": "^7.1.1",
+    "eslint": "^9.0.0",
+    "eslint-config-snordian-h5p": "github:otacke/eslint-config-snordian-h5p",
+    "mini-css-extract-plugin": "^2.8.1",
+    "regenerator-runtime": "^0.14.1",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.69.4",
-    "sass-loader": "^13.3.2",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recommended": "^13.0.0",
-    "stylelint-config-recommended-scss": "^13.0.0",
-    "webpack": "^5.89.0",
+    "sass": "^1.74.1",
+    "sass-loader": "^14.1.1",
+    "stylelint": "^16.3.1",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead",
